PIMC modifications and paramters Update of default configuration Added functionality so BEN save dels needed for training Adjusted lead trust and added lead scores to output Save deals, where training is needed

--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -16,6 +16,8 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+# Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
+use_bba_to_count_aces = true
 # Use 2/1 in BBA
 bba_ns = 0
 bba_ew = 0
@@ -63,6 +65,8 @@ max_estimated_score = 300
 min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
 alert_supported = True
+# We only alert if we are pretty sure
+alert_threshold = 0.8
 
 [adjustments]
 # Are adjustments enabled
@@ -137,7 +141,7 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 50
+min_sample_hands_play = 20
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
@@ -152,16 +156,19 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = False
+# Use real IMP or MP when finding the play - original version used average tricks
+use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
-# Use real IMP or MP when finding the play - original version used average tricks
-use_real_imp_or_mp = True
 
 [pimc]
+# Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
+pimc_verbose = False
 # Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
+pimc_use_fusion_strategy = False
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
@@ -172,7 +179,7 @@ pimc_start_trick_defender = 3
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
-pimc_constraints_each_trick = False
+pimc_constraints_each_trick = True
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
 pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
@@ -199,10 +206,10 @@ shp_reduction_factor = 0.3
 no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.03
+lead_accept_threshold = 0.05
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
-lead_accept_threshold_partner_trust = 0.05
+lead_accept_threshold_partner_trust = 0.10
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 #use_distance = False
 #bidding_threshold_sampling = 0.25
@@ -221,8 +228,8 @@ play_accept_threshold = 0.03
 bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
-# The number of hands we will generate to find sample_hands_auction
-sample_boards_for_auction = 10000
+# The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
+sample_boards_for_auction = 20000
 # Minimum number of hands when caclulating scores in the bidding
 min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
@@ -234,4 +241,4 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.01
+exclude_samples = 0.005
