--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -156,16 +156,19 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = False
+# Use real IMP or MP when finding the play - original version used average tricks
+use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
-# Use real IMP or MP when finding the play - original version used average tricks
-use_real_imp_or_mp = True
 
 [pimc]
+# Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
+pimc_verbose = False
 # Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
+pimc_use_fusion_strategy = False
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
@@ -176,7 +179,7 @@ pimc_start_trick_defender = 3
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
-pimc_constraints_each_trick = False
+pimc_constraints_each_trick = True
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
 pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
@@ -203,10 +206,10 @@ shp_reduction_factor = 0.3
 no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.03
+lead_accept_threshold = 0.05
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
-lead_accept_threshold_partner_trust = 0.05
+lead_accept_threshold_partner_trust = 0.10
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 #use_distance = False
 #bidding_threshold_sampling = 0.25
@@ -225,7 +228,7 @@ play_accept_threshold = 0.03
 bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
-# The number of hands we will generate to find sample_hands_auction
+# The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
 sample_boards_for_auction = 20000
 # Minimum number of hands when caclulating scores in the bidding
 min_sample_hands_auction = 10
