--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,15 +1,23 @@
 [models]
-name = default (GIB)
+name = default (GIB) Keras (24 card deck)
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 2
+model_version = 3
+
+# Small cards (pips) are grouped, so when bidding we have AKQJTx
+n_cards_bidding = 24
+# During play we have AKQJT98x
+n_cards_play = 32
+
 # Version of tensorflow to use
-tf_version = 1
-# NS and EW play the same system
-NS = -1
-EW = -1
+tf_version = 2
+# Same system for both sides
+NS = 1
+EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+# Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
+use_bba_to_count_aces = true
 # Use 2/1 in BBA
 bba_ns = 0
 bba_ew = 0
@@ -17,21 +25,26 @@ bba_ew = 0
 matchpoint = False
 
 [contract]
-contract = models/contract/contract-193200
+contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
-bidder = models/GIB/2024-07-06_bidding_V2-3114000
-info = models/GIB/binfo_V2-1420000
-# If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.07
+bidder = models/TF2models/GIB8663_2024-10-12-E100.keras
+# only used for sampling
+opponent = models/TF2models/GIB8663_2024-10-12-E100.keras
+info =  models/TF2models/GIB-Info8663_2024-10-12-E100.keras
+# If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
+search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 12
+# Disabled with a descending search_threshold
+eval_after_bid_count = -1
 # If False the opening bid will be without simulation, even with multiple candidates
-eval_opening_bid = False
+# With relatively high trust for first bid, this should be OK
+eval_opening_bid = True
 # Add Pass as a bid to evaluate after this number of bids
-eval_pass_after_bid_count = 12
+# Disabled when we have rescue bid activated
+eval_pass_after_bid_count = -1
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
@@ -48,15 +61,19 @@ max_samples_checked = 20
 min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
+# If samples has bidding below this we will not use it for rescue bid
+min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
 alert_supported = True
+# We only alert if we are pretty sure
+alert_threshold = 0.8
 
 [adjustments]
 # Are adjustments enabled
 use_adjustment = True
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
-adjust_NN = 50
+adjust_NN = 60
 # If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
@@ -64,6 +81,8 @@ adjust_XX = 200
 # Subtract this from expected score before double in passout situation
 # If not going 2 down, the adjustment is doubled
 adjust_X = 100
+# When doubling in passout situation remove xx% the best boards, due to bad samples 
+adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
 # When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
@@ -74,11 +93,14 @@ adjust_min1 = 0.002
 adjust_min2 = 0.0002
 adjust_min1_by = 200
 adjust_min2_by = 200
+# Adjustment above is in points, so we need to translate it to some kind of MP or Imp
+factor_to_translate_to_mp = 10
+factor_to_translate_to_imp = 25
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = UCBC 2024/Models/lead_suit-999000
-lead_nt = UCBC 2024/Models/lead_nt-475000
+lead_suit = models/TF2models/Lead-Suit_2024-07-13-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-13-E20.keras
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
@@ -90,32 +112,36 @@ min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
 lead_from_pips_nt = 24
 lead_from_pips_suit = 135
+# use real calcualtion or just tricks
+use_real_imp_or_mp_opening_lead = True
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
-single_dummy_estimator = models/lr3_model/lr3-1000000
+single_dummy_estimator = models/TF2models/SD_2024-07-08-E20.keras
 # Model for finding single dummy estimates without opening lead
-double_dummy_estimator = models/single_dummy/single_dummy-32768000
-# use the following estimator, sde, dde or both
-estimator = dde
-# Use double dummy when estimating tricks during bidding - to slow if 200 samples
+double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
+# use the following estimator, sde, dde, both or none. If both dde will be preferred
+estimator = none
+# Use double dummy when estimating tricks during bidding - to slow if 200 samples - higher priority than the above estimators
 double_dummy_calculator = True
+# use real calculation or just tricks - this is only working for double dummy calculator due to performance
+use_real_imp_or_mp_bidding = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = True
-lefty_nt = models/playing/lefty_nt-475000
-dummy_nt = models/playing/dummy_nt-475000
-righty_nt = models/playing/righty_nt-475000
-decl_nt = models/playing/decl_nt-475000
-lefty_suit = models/playing/lefty_suit-999000
-dummy_suit = models/playing/dummy_suit-999000
-righty_suit = models/playing/righty_suit-999000
-decl_suit = models/playing/decl_suit-999000
+lefty_nt = models/TF2models/lefty_nt_2024-07-08-E20.keras
+dummy_nt = models/TF2models/dummy_nt_2024-07-08-E20.keras
+righty_nt = models/TF2models/righty_nt_2024-07-16-E20.keras
+decl_nt = models/TF2models/decl_nt_2024-07-08-E20.keras
+lefty_suit = models/TF2models/lefty_suit_2024-07-08-E20.keras
+dummy_suit = models/TF2models/dummy_suit_2024-07-08-E20.keras
+righty_suit = models/TF2models/righty_suit_2024-07-16-E20.keras
+decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 20
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
@@ -130,53 +156,60 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = False
+# Use real IMP or MP when finding the play - original version used average tricks
+use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
 
 [pimc]
-# Are we using PIMC as declarer or defender? 
+# Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
+pimc_verbose = False
+# Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
+pimc_use_fusion_strategy = True
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
 pimc_start_trick_declarer = 3
-pimc_start_trick_defender = 6
+pimc_start_trick_defender = 3
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
-pimc_max_playouts = 400
+pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
 autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.00
+pimc_trust_NN = 0.00 
 # Combine with BEN double dummy
-pimc_ben_dd_declaring = False
-pimc_ben_dd_defending = False
+pimc_ben_dd_declaring = True
+pimc_ben_dd_defending = True
 # Use a priori probabilities
-pimc_apriori_probability = True
+# Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
+# and when calculating chance for making/defeating the contract
+pimc_apriori_probability = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
 # Multiplied to the hcp-value of the card
 hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
-shp_reduction_factor = 0.5
+shp_reduction_factor = 0.3
 # If bid selected directly by Neural net, then save time dropping generating samples
 no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.03
+lead_accept_threshold = 0.05
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
-lead_accept_threshold_partner_trust = 0.05
+lead_accept_threshold_partner_trust = 0.10
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 #use_distance = False
 #bidding_threshold_sampling = 0.25
@@ -184,27 +217,28 @@ lead_accept_threshold_partner_trust = 0.05
 # This is calculated using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
 use_distance = True
 bidding_threshold_sampling = 0.70
+# If not finding enough samples above bidding_threshold_sampling we extend to this, until we get min_sample_hands_auction
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.07
+bid_accept_play_threshold = 0.1
 
-# Filter to remove hands, where the play is inconsistent with the sample
+# Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.01
+bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
-# The number of hands we will generate to find sample_hands_auction
-sample_boards_for_auction = 5000
+# The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
+sample_boards_for_auction = 20000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 20
+min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 50000
+sample_boards_for_auction_opening_lead = 20000
 # Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.07
+exclude_samples = 0.005
