--- a/src/config/BBA-SAYC.conf
+++ b/src/config/BBA-SAYC.conf
@@ -9,7 +9,7 @@ tf_version = 1
 NS = -1
 EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
-use_bba = False
+use_bba = True
 # Use 2/1 in BBA
 bba_ns = 1
 bba_ew = 1
@@ -143,14 +143,14 @@ pimc_use_defending = True
 pimc_wait = 3
 # When should PIMC kick in
 pimc_start_trick_declarer = 3
-pimc_start_trick_defender = 6
+pimc_start_trick_defender = 3
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
-pimc_max_playouts = 400
+pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
@@ -161,8 +161,7 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = False
 pimc_ben_dd_defending = False
 # Use a priori probabilities
-pimc_apriori_probability = True
-
+pimc_apriori_probability = False
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
 # Multiplied to the hcp-value of the card
