--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -99,8 +99,8 @@ factor_to_translate_to_imp = 25
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = models/TF2models/Lead-Suit_2024-07-13-E20.keras
-lead_nt = models/TF2models/Lead-NT_2024-07-13-E20.keras
+lead_suit = models/TF2models/Lead-Suit_2024-11-04-E200.keras
+lead_nt = models/TF2models/Lead-NT_2024-11-04-E200.keras
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
@@ -198,18 +198,25 @@ pimc_apriori_probability = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
-# Multiplied to the hcp-value of the card
+# Multiplied to the hcp-value of the card, the higher value there more the samples will have the average hcp's
 hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
 shp_reduction_factor = 0.3
 # If bid selected directly by Neural net, then save time dropping generating samples
 no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
-# Can be disabled by setting it to zero
-lead_accept_threshold = 0.05
-# If we play with our normal partner we can add som trust to the lead
+# setting the following to false is the default behavior from a 32 card deck
+# lead_accept_threshold_suit will sum all lead for each suit and check the suit lead
+lead_accept_threshold_suit = False
+# lead_accept_threshold_honors will switch to the 24 deck suit, when validating the lead
+lead_accept_threshold_honors = False
+# Can be disabled by setting it to zero. This is a filter, so we keep ot low, as any lead can be possible
+lead_accept_threshold = 0.01
+
+# If we play with our normal partner we can add some trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.10
+
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 #use_distance = False
 #bidding_threshold_sampling = 0.25
@@ -220,10 +227,10 @@ bidding_threshold_sampling = 0.70
 # If not finding enough samples above bidding_threshold_sampling we extend to this, until we get min_sample_hands_auction
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.1
+bid_accept_play_threshold = 0.01
 
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
-play_accept_threshold = 0.03
+play_accept_threshold = 0.01
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
