More configuration, but more important is an incremental way of creating samples, saing about 30% of the bidding time

--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -23,6 +23,8 @@ bba_ns = 0
 bba_ew = 0
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
+# Do not print warnings about bad models, training etc in the output
+suppress_warnings = False
 
 [contract]
 contract = models/TF2models/Contract_2024-08-16-E50.keras
@@ -203,7 +205,7 @@ hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
 shp_reduction_factor = 0.3
 # If bid selected directly by Neural net, then save time dropping generating samples
-no_samples_when_no_search = False
+no_samples_when_no_search = True
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # setting the following to false is the default behavior from a 32 card deck
 # lead_accept_threshold_suit will sum all lead for each suit and check the suit lead
@@ -236,7 +238,13 @@ bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
+# This is now a max as we generate blocks of sample_boards_for_auction_step hands
 sample_boards_for_auction = 20000
+sample_boards_for_auction_step = 1000
+# After each real bid we add 50% to the max samples. setting to zero disables
+increase_for_bid_count = 6
+# If samples below this threshold print a warning in the log
+warn_to_few_samples = 10
 # Minimum number of hands when caclulating scores in the bidding
 min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
