--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -196,9 +196,9 @@ pimc_trust_NN = 0.00
 # Combine with BEN double dummy
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
-# When merging results we can trust one side more. Default is 0.5
-pimc_ben_dd_declaring_weight = 0.5
-pimc_ben_dd_defending_weight = 0.5
+# When merging results we can trust one side more. Default is 0.5. Should sum to 1.0
+pimc_ben_dd_declaring_weight = 0.3
+pimc_ben_dd_defending_weight = 0.7
 # Use a priori probabilities
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
@@ -224,7 +224,8 @@ no_samples_when_no_search = True
 # lead_accept_threshold_suit will sum all lead for each suit and check the suit lead
 lead_accept_threshold_suit = False
 # lead_accept_threshold_honors will switch to the 24 deck suit, when validating the lead
-lead_accept_threshold_honors = False
+# if following lead conventions like 2nd from 3 this should be enabled
+lead_accept_threshold_honors = True
 # Can be disabled by setting it to zero. This is a filter, so we keep ot low, as any lead can be possible
 lead_accept_threshold = 0.01
 
@@ -247,6 +248,7 @@ bid_accept_play_threshold = 0.2
 
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 play_accept_threshold = 0.01
+min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
