Updates to PIMC, and some minor UI fixes. Changed weight between PIMC and BEN

--- a/src/config/muppet_TF2_v3.conf
+++ b/src/config/muppet_TF2_v3.conf
@@ -170,6 +170,9 @@ pimc_trust_NN = 0.00
 # Combine with BEN double dummy
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
+# When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
+pimc_ben_dd_declaring_weight = 0.5
+pimc_ben_dd_defending_weight = 0.5
 # Use a priori probabilities
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
