--- a/src/config/speed_TF2.conf
+++ b/src/config/speed_TF2.conf
@@ -146,6 +146,9 @@ pimc_trust_NN = 0.00
 # Combine with BEN double dummy
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
+# When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
+pimc_ben_dd_declaring_weight = 0.5
+pimc_ben_dd_defending_weight = 0.5
 # Use a priori probabilities
 pimc_apriori_probability = False
 
