Allowing to connect to TM using hostname. New parameter for PIMC

--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -197,6 +197,8 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
+# If bidding quality is below the threshold, we will only trust PIMC, as we BENs samples do not match the bidding
+pimc_bidding_quality = 0.4
 pimc_ben_dd_declaring_weight = 0.3
 pimc_ben_dd_defending_weight = 0.3
 # Use a priori probabilities
