Ignorebidding info in undisturbed bidding When many samples select randomly but based on stats for bidding, opening lead and play

--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -197,6 +197,8 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
+# If bidding quality is below the threshold, we will only trust PIMC, as we BENs samples do not match the bidding
+pimc_bidding_quality = 0.4
 pimc_ben_dd_declaring_weight = 0.3
 pimc_ben_dd_defending_weight = 0.3
 # Use a priori probabilities
@@ -247,7 +249,9 @@ bid_accept_threshold_bidding = 0.40
 bid_accept_play_threshold = 0.40
 
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
-play_accept_threshold = 0.01
+# This is difficult, as setting it to low will include boards where BEN not will repeat a finesse, but setting it to high might reduce useable samples
+# Also important to notice, this is not used for PIMC as defender or declarer
+play_accept_threshold = 0.03
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
