--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -150,7 +150,8 @@ min_sample_hands_play_bad = 8
 sample_boards_for_play = 5000
 # Should possible claim be calculated
 claim = True
-# Use bidding info during play
+# Use bidding info for sampling during play and bidding
+# Setting this to false will require a higher number of generated deals
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
@@ -164,6 +165,8 @@ use_real_imp_or_mp = True
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
+# We can filter away play, that is not suggested by the neural network. 
+trust_NN = 0.0
 
 [pimc]
 # Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
@@ -174,7 +177,7 @@ pimc_use_fusion_strategy = True
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
-# When should PIMC kick in
+# When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 3
 pimc_start_trick_defender = 3
 # Extract hcp from samples and use as input to PIMC
@@ -188,19 +191,31 @@ pimc_max_playouts = 200
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
 autoplaysingleton = True
-# PIMC trust NN
+# PIMC trust NN. We can filter away play, that is not suggested by the neural network
 pimc_trust_NN = 0.00 
 # Combine with BEN double dummy
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
+# When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
+# If bidding quality is below the threshold, we will only trust PIMC, as we BENs samples do not match the bidding
+pimc_bidding_quality = 0.4
+pimc_ben_dd_declaring_weight = 0.3
+pimc_ben_dd_defending_weight = 0.3
 # Use a priori probabilities
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
 pimc_apriori_probability = False
+# These margins are added before calling OIMC to be sure we get some deals, that does not match the bidding entirely
+pimc_margin_suit = 1
+pimc_margin_hcp = 3
+pimc_margin_suit_bad_samples = 3
+pimc_margin_hcp_bad_samples = 5
+
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
 # Multiplied to the hcp-value of the card, the higher value there more the samples will have the average hcp's
+# This can be disable by setting use_biddinginfo to false
 hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
 shp_reduction_factor = 0.3
@@ -211,7 +226,8 @@ no_samples_when_no_search = True
 # lead_accept_threshold_suit will sum all lead for each suit and check the suit lead
 lead_accept_threshold_suit = False
 # lead_accept_threshold_honors will switch to the 24 deck suit, when validating the lead
-lead_accept_threshold_honors = False
+# if following lead conventions like 2nd from 3 this should be enabled
+lead_accept_threshold_honors = True
 # Can be disabled by setting it to zero. This is a filter, so we keep ot low, as any lead can be possible
 lead_accept_threshold = 0.01
 
@@ -223,16 +239,20 @@ lead_accept_threshold_partner_trust = 0.10
 #use_distance = False
 #bidding_threshold_sampling = 0.25
 #bid_accept_threshold_bidding = 0.20
+#bid_accept_play_threshold = 0.4
 # This is calculated using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
 use_distance = True
 bidding_threshold_sampling = 0.70
 # If not finding enough samples above bidding_threshold_sampling we extend to this, until we get min_sample_hands_auction
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.4
+bid_accept_play_threshold = 0.40
 
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
-play_accept_threshold = 0.01
+# This is difficult, as setting it to low will include boards where BEN not will repeat a finesse, but setting it to high might reduce useable samples
+# Also important to notice, this is not used for PIMC as defender or declarer
+play_accept_threshold = 0.03
+min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
 # Number hands where we will calculate scores for when bidding
