--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -197,6 +197,8 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
+# If bidding quality is below the threshold, we will only trust PIMC, as we BENs samples do not match the bidding
+pimc_bidding_quality = 0.4
 pimc_ben_dd_declaring_weight = 0.3
 pimc_ben_dd_defending_weight = 0.3
 # Use a priori probabilities
@@ -244,10 +246,12 @@ bidding_threshold_sampling = 0.70
 # If not finding enough samples above bidding_threshold_sampling we extend to this, until we get min_sample_hands_auction
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.4
+bid_accept_play_threshold = 0.40
 
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
-play_accept_threshold = 0.01
+# This is difficult, as setting it to low will include boards where BEN not will repeat a finesse, but setting it to high might reduce useable samples
+# Also important to notice, this is not used for PIMC as defender or declarer
+play_accept_threshold = 0.03
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
