--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -249,7 +249,9 @@ bid_accept_threshold_bidding = 0.40
 bid_accept_play_threshold = 0.40
 
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
-play_accept_threshold = 0.01
+# This is difficult, as setting it to low will include boards where BEN not will repeat a finesse, but setting it to high might reduce useable samples
+# Also important to notice, this is not used for PIMC as defender or declarer
+play_accept_threshold = 0.03
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
