Fixed error when "discarding" when we have a trump. Fixed that a sample has the same pips, when using DD in different bidding sequences. Update seed at each bid, to be able to compare api and table_manager_client. Added new feature to get samples from previous bidding round

--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -277,3 +277,5 @@ sample_hands_opening_lead = 200
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
 exclude_samples = 0.005
+# Skip last bidding round to find samples, if we did not find the minimum needed. We will only try to find 25% samples
+sample_previous_round_if_needed = True
