--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -1,5 +1,5 @@
 [models]
-name = default (GIB) Keras (24 card deck)
+name = GIB as on BBO
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -30,10 +30,10 @@ suppress_warnings = True
 contract = models/TF2models/Contract_2024-11-30-E50.keras
 
 [bidding]
-bidder = models/TF2models/GIB8663_2024-10-12-E100.keras
+bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
 # only used for sampling
-opponent = models/TF2models/GIB8663_2024-10-12-E100.keras
-info =  models/TF2models/GIB-Info8663_2024-10-12-E100.keras
+opponent = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
+info =  models/TF2models/GIB-BBOInfo-8712_2024-11-30-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -66,7 +66,7 @@ max_estimated_score = 300
 # If samples has bidding below this we will not use it for rescue bid
 min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
-alert_supported = True
+alert_supported = False
 # We only alert if we are pretty sure
 alert_threshold = 0.8
 
@@ -158,7 +158,7 @@ use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
-suitc_sidesuit_check = False
+suitc_sidesuit_check = True
 # Use real IMP or MP when finding the play - original version used average tricks
 use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
@@ -170,17 +170,17 @@ trust_NN = 0.0
 
 [pimc]
 # Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
-pimc_verbose = True
+pimc_verbose = False
 # Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
-pimc_use_fusion_strategy = True
+pimc_use_fusion_strategy = False
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
-# Extract hcp and suit length from samples and use as input to PIMC - margins added
+# Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
@@ -205,7 +205,7 @@ pimc_ben_dd_defending_weight = 0.3
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
 pimc_apriori_probability = False
-# These margins are added before calling PIMC to be sure we get some deals, that does not match the bidding entirely
+# These margins are added before calling OIMC to be sure we get some deals, that does not match the bidding entirely
 pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 3
@@ -277,3 +277,5 @@ sample_hands_opening_lead = 200
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
 exclude_samples = 0.005
+# Skip last bidding round to find samples, if we did not find the minimum needed. We will only try to find 25% samples
+sample_previous_round_if_needed = True
