--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -1,5 +1,5 @@
 [models]
-name = default (GIB) Keras (24 card deck) as on BBO
+name = GIB as on BBO
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -17,7 +17,7 @@ EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
-use_bba_to_count_aces = true
+use_bba_to_count_aces = True
 # Use 2/1 in BBA
 bba_ns = BBA/CC/GIB-BBO.bbsa
 bba_ew = BBA/CC/GIB-BBO.bbsa
@@ -30,10 +30,10 @@ suppress_warnings = True
 contract = models/TF2models/Contract_2024-11-30-E50.keras
 
 [bidding]
-bidder = models/TF2models/GIB-BBO-8712_2024-11-26-E25.keras
+bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
 # only used for sampling
-opponent = models/TF2models/GIB-BBO-8712_2024-11-26-E25.keras
-info =  models/TF2models/GIB-BBOInfo-8712_2024-11-26-E25.keras
+opponent = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
+info =  models/TF2models/GIB-BBOInfo-8712_2024-11-30-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
