--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,5 +1,5 @@
 [models]
-name = default (GIB) Keras (24 card deck)
+name = GIB as on BBO
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -17,23 +17,23 @@ EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
-use_bba_to_count_aces = true
+use_bba_to_count_aces = True
 # Use 2/1 in BBA
 bba_ns = BBA/CC/GIB-BBO.bbsa
 bba_ew = BBA/CC/GIB-BBO.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
-suppress_warnings = False
+suppress_warnings = True
 
 [contract]
 contract = models/TF2models/Contract_2024-11-30-E50.keras
 
 [bidding]
-bidder = models/TF2models/GIB8663_2024-10-12-E100.keras
+bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
 # only used for sampling
-opponent = models/TF2models/GIB8663_2024-10-12-E100.keras
-info =  models/TF2models/GIB-Info8663_2024-10-12-E100.keras
+opponent = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
+info =  models/TF2models/GIB-BBOInfo-8712_2024-11-30-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -66,7 +66,7 @@ max_estimated_score = 300
 # If samples has bidding below this we will not use it for rescue bid
 min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
-alert_supported = True
+alert_supported = False
 # We only alert if we are pretty sure
 alert_threshold = 0.8
 
@@ -158,7 +158,7 @@ use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
-suitc_sidesuit_check = False
+suitc_sidesuit_check = True
 # Use real IMP or MP when finding the play - original version used average tricks
 use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
@@ -173,18 +173,18 @@ trust_NN = 0.0
 pimc_verbose = False
 # Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
-pimc_use_fusion_strategy = True
+pimc_use_fusion_strategy = False
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
-pimc_start_trick_declarer = 3
-pimc_start_trick_defender = 3
+pimc_start_trick_declarer = 1
+pimc_start_trick_defender = 1
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
-pimc_constraints_each_trick = False
+pimc_constraints_each_trick = True
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
 pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
@@ -277,3 +277,5 @@ sample_hands_opening_lead = 200
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
 exclude_samples = 0.005
+# Skip last bidding round to find samples, if we did not find the minimum needed. We will only try to find 25% samples
+sample_previous_round_if_needed = True
