Loading DLL's as singletons Clean up in logging with --verbose Added config file

--- a/src/config/default_tf2_nosearch.conf
+++ b/src/config/default_tf2_nosearch.conf
@@ -17,7 +17,7 @@ EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
-use_bba_to_count_aces = True
+use_bba_to_count_aces = False
 # Use 2/1 in BBA
 bba_ns = BBA/CC/BEN-21GF.bbsa
 bba_ew = BBA/CC/BEN-21GF.bbsa
@@ -36,7 +36,7 @@ bidder = models/TF2models/BEN-21GF-8712_2024-11-29-E48.keras
 opponent = models/TF2models/BEN-21GF-8712_2024-11-29-E48.keras
 info =  models/TF2models/BEN-21GFInfo-8712_2024-11-29-E71.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
-search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
+search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
@@ -57,7 +57,7 @@ no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
 use_probability = True
 # Before the final pass validate the contract with a neural network
-check_final_contract = True
+check_final_contract = False
 # How many samples checked
 max_samples_checked = 20
 # Minimum gain for making a rescue bid
