--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,5 +1,5 @@
 [models]
-name = GIB as on BBO
+name = BEN Sayc
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -19,8 +19,8 @@ use_bba = False
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
-bba_ns = BBA/CC/GIB-BBO.bbsa
-bba_ew = BBA/CC/GIB-BBO.bbsa
+bba_ns = BBA/CC/BEN-SAYC.bbsa
+bba_ew = BBA/CC/BEN-SAYC.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
@@ -31,10 +31,10 @@ contract = models/TF2models/Contract_2024-12-09-E50.keras
 trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 [bidding]
-bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
+bidder = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
 # only used for sampling
-opponent = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
-info =  models/TF2models/GIB-BBOInfo-8712_2024-11-30-E50.keras
+opponent = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
+info =  models/TF2models/BEN-SaycInfo-8712_2024-11-29-E71.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -189,7 +189,7 @@ pimc_constraints_each_trick = True
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
 pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
-pimc_max_threads = 6
+pimc_max_threads = 12
 # If singleton, just play it without evaluating it
 autoplaysingleton = True
 # PIMC trust NN. We can filter away play, that is not suggested by the neural network
