Added suit adjustment, and setting for more trust in SuitC

--- a/src/config/MvsM/BEN-MBridge.conf
+++ b/src/config/MvsM/BEN-MBridge.conf
@@ -16,15 +16,16 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+consult_bba = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
 bba_our_cc = BBA/CC/BEN-21GF.bbsa
-bba_their_cc = BBA/CC/BEN-21GF.bbsa
+bba_their_cc = BBA/CC/Micro Bridge 13.4.bbsa
 # Playing matchpoint? Otherwise it is teams
-matchpoint = False
+matchpoint = True
 # Do not print warnings about bad models, training etc in the output
-suppress_warnings = True
+suppress_warnings = False
 
 [contract]
 contract = models/TF2models/Contract_2024-12-09-E50.keras
@@ -33,7 +34,7 @@ trick = models/TF2models/Tricks_2024-12-09-E50.keras
 [bidding]
 bidder = models/TF2models/BEN-21GF-8712_2024-11-29-E48.keras
 # only used for sampling
-opponent = models/TF2models/BEN-21GF-8712_2024-11-29-E48.keras
+opponent = models/TF2models/Lia-21GF-8712_2024-11-28-E25.keras
 info =  models/TF2models/BEN-21GFInfo-8712_2024-11-29-E71.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
