--- a/src/config/MvsM/BEN-Robo.conf
+++ b/src/config/MvsM/BEN-Robo.conf
@@ -100,6 +100,8 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
+# Try to adjust the suit to play based on evaluation of the suit
+use_suit_adjust = True
 
 [lead]
 # Neural network for suggesting opening lead
@@ -161,6 +163,8 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = True
+# Select the card from SuitC even if different from DD. Problem is DD always find the queen
+force_suitc = True
 # Use real IMP or MP when finding the play - original version used average tricks
 use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
