--- a/src/config/TF1.x/BBA-SAYC.conf
+++ b/src/config/TF1.x/BBA-SAYC.conf
@@ -1,5 +1,5 @@
 [models]
-name = default (GIB) Keras (24 card deck)
+name = BBA playing SAYC
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -11,16 +11,14 @@ n_cards_play = 32
 
 # Version of tensorflow to use
 tf_version = 2
-# Same system for both sides
+# NS and EW play the same system
 NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
-use_bba = False
-# Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
-use_bba_to_count_aces = True
+use_bba = True
 # Use 2/1 in BBA
-bba_our_cc = BBA/CC/GIB-BBO.bbsa
-bba_their_cc = BBA/CC/GIB-BBO.bbsa
+bba_our_cc = BBA/CC/BEN-Sayc.bbsa
+bba_their_cc = BBA/CC/BEN-Sayc.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
@@ -32,23 +30,20 @@ trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 
 [bidding]
-bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
+bidder = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
 # only used for sampling
-opponent = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
-info =  models/TF2models/GIB-BBOInfo-8712_2024-11-30-E50.keras
+opponent = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
+info =  models/TF2models/BEN-SaycInfo-8712_2024-11-29-E71.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
-search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
+search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-# Disabled with a descending search_threshold
-eval_after_bid_count = -1
+eval_after_bid_count = 12
 # If False the opening bid will be without simulation, even with multiple candidates
-# With relatively high trust for first bid, this should be OK
-eval_opening_bid = True
+eval_opening_bid = False
 # Add Pass as a bid to evaluate after this number of bids
-# Disabled when we have rescue bid activated
-eval_pass_after_bid_count = -1
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
@@ -174,9 +169,9 @@ trust_NN = 0.0
 # Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
 pimc_verbose = False
 # Are we using PIMC as declarer and/or defender? 
-pimc_use_declaring = False
+pimc_use_declaring = True
 pimc_use_fusion_strategy = False
-pimc_use_defending = False
+pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
@@ -190,7 +185,7 @@ pimc_constraints_each_trick = True
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
 pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
-pimc_max_threads = 12
+pimc_max_threads = 6
 # If singleton, just play it without evaluating it
 autoplaysingleton = True
 # PIMC trust NN. We can filter away play, that is not suggested by the neural network
@@ -199,8 +194,9 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # When merging results we can trust one side more. Default is 0.5. The weight is for PIMC, so the higher the more trust in PIMC
-# If bidding quality is below the threshold, we will only trust PIMC, as we BENs samples do not match the bidding
-pimc_bidding_quality = 0.4
+# If bidding quality is below the threshold, we will switch trust between BEN and PIMC, as BENs samples do not match the bidding.
+
+pimc_bidding_quality = 0.1
 pimc_ben_dd_declaring_weight = 0.25
 pimc_ben_dd_defending_weight = 0.25
 # Use a priori probabilities
@@ -237,8 +233,6 @@ lead_accept_threshold = 0.10
 # lead_accept_threshold_honors = False
 # Can be disabled by setting it to zero. This is a filter, so we keep ot low, as any lead can be possible
 # lead_accept_threshold = 0.01
-
-
 
 # If we play with our normal partner we can add some trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
