--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,5 +1,5 @@
 [models]
-name = BEN Sayc
+name = GIB as on BBO
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -16,11 +16,12 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+consult_bba = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
-bba_our_cc = BBA/CC/BEN-SAYC.bbsa
-bba_their_cc = BBA/CC/BEN-SAYC.bbsa
+bba_our_cc = BBA/CC/GIB-BBO.bbsa
+bba_their_cc = BBA/CC/GIB-BBO.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
@@ -31,10 +32,10 @@ contract = models/TF2models/Contract_2024-12-09-E50.keras
 trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 [bidding]
-bidder = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
+bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
 # only used for sampling
-opponent = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
-info =  models/TF2models/BEN-SaycInfo-8712_2024-11-29-E71.keras
+opponent = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
+info =  models/TF2models/GIB-BBOInfo-8712_2024-11-30-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -99,6 +100,8 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
+# Try to adjust the suit to play based on evaluation of the suit
+use_suit_adjust = True
 
 [lead]
 # Neural network for suggesting opening lead
@@ -160,6 +163,8 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = True
+# Select the card from SuitC even if different from DD. Problem is DD always find the queen
+force_suitc = True
 # Use real IMP or MP when finding the play - original version used average tricks
 use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
@@ -212,7 +217,6 @@ pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
-
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
