--- a/src/config/BEN-21GF.conf
+++ b/src/config/BEN-21GF.conf
@@ -16,6 +16,7 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+consult_bba = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
