--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -16,6 +16,7 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+consult_bba = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
@@ -29,7 +30,6 @@ suppress_warnings = True
 [contract]
 contract = models/TF2models/Contract_2024-12-09-E50.keras
 trick = models/TF2models/Tricks_2024-12-09-E50.keras
-
 
 [bidding]
 bidder = models/TF2models/GIB-BBO-8712_2024-12-01-E44.keras
@@ -100,6 +100,8 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
+# Try to adjust the suit to play based on evaluation of the suit
+use_suit_adjust = True
 
 [lead]
 # Neural network for suggesting opening lead
@@ -161,6 +163,8 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = True
+# Select the card from SuitC even if different from DD. Problem is DD always find the queen
+force_suitc = True
 # Use real IMP or MP when finding the play - original version used average tricks
 use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
@@ -214,7 +218,6 @@ pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
 
-
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
 # Multiplied to the hcp-value of the card, the higher value there more the samples will have the average hcp's
@@ -259,8 +262,8 @@ bid_accept_play_threshold = 0.40
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 # This is difficult, as setting it to low will include boards where BEN not will repeat a finesse, but setting it to high might reduce useable samples
 # Also important to notice, this is not used for PIMC as defender or declarer
-# It seems that to drop hands where the finesse worked once, we should above 0.025
-play_accept_threshold = 0.025
+play_accept_threshold = 0.03
+play_accept_threshold_partner = 0.1
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
