--- a/src/config/MvsM/BEN-PowerShark.conf
+++ b/src/config/MvsM/BEN-PowerShark.conf
@@ -16,6 +16,7 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+consult_bba = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
@@ -99,6 +100,8 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
+# Try to adjust the suit to play based on evaluation of the suit
+use_suit_adjust = True
 
 [lead]
 # Neural network for suggesting opening lead
@@ -160,6 +163,8 @@ use_biddingquality_in_eval = True
 use_suitc = True
 # Only check trump in suit contracts (and all suits in NT)
 suitc_sidesuit_check = True
+# Select the card from SuitC even if different from DD. Problem is DD always find the queen
+force_suitc = True
 # Use real IMP or MP when finding the play - original version used average tricks
 use_real_imp_or_mp = True
 # Drawing trump, reward is given if opponents has trump, penalty if not
@@ -212,7 +217,6 @@ pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
-
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
