--- a/src/config/MvsM/BEN-SAYC-WBridge5.conf
+++ b/src/config/MvsM/BEN-SAYC-WBridge5.conf
@@ -31,7 +31,6 @@ suppress_warnings = True
 contract = models/TF2models/Contract_2024-12-09-E50.keras
 trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
-
 [bidding]
 bidder = models/TF2models/BEN-Sayc-8712_2024-11-29-E49.keras
 # only used for sampling
@@ -157,7 +156,7 @@ sample_boards_for_play = 5000
 claim = True
 # Use bidding info for sampling during play and bidding
 # Setting this to false will require a higher number of generated deals
-use_biddinginfo = True
+use_biddinginfo = False
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
