--- a/src/config/MvsM/BEN-21GF-WBridge5.conf
+++ b/src/config/MvsM/BEN-21GF-WBridge5.conf
@@ -1,5 +1,5 @@
 [models]
-name = BEN Sayc
+name = BEN 21GF
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -21,7 +21,7 @@ consult_bba = True
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
 bba_our_cc = BBA/CC/BEN-21GF.bbsa
-bba_their_cc = BBA/CC/RoboSayc.bbsa
+bba_their_cc = BBA/CC/WBridge5-Sayc.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = True
 # Do not print warnings about bad models, training etc in the output
@@ -34,7 +34,7 @@ trick = models/TF2models/Tricks_2024-12-09-E50.keras
 [bidding]
 bidder = models/TF2models/BEN-21GF-8712_2024-11-29-E48.keras
 # only used for sampling
-opponent = models/TF2models/RoboSayc-8710_2024-11-24-E31.keras
+opponent = models/TF2models/WBridge5-Sayc-8712_2024-11-29-E25.keras
 info =  models/TF2models/BEN-21GFInfo-8712_2024-11-29-E71.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
