Added trust for declarers play Updated rules for using SuitC

--- a/src/config/MvsM/BEN-Lia.conf
+++ b/src/config/MvsM/BEN-Lia.conf
@@ -267,8 +267,10 @@ bid_accept_play_threshold = 0.40
 # Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 # This is difficult, as setting it to low will include boards where BEN not will repeat a finesse, but setting it to high might reduce useable samples
 # Also important to notice, this is not used for PIMC as defender or declarer
-play_accept_threshold = 0.03
+play_accept_threshold_opponents = 0.03
 play_accept_threshold_partner = 0.1
+# How much do we trust declares play
+play_accept_threshold_declarer = 0.1
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
