--- a/src/config/TF1.x/0.10.conf
+++ b/src/config/TF1.x/0.10.conf
@@ -99,8 +99,11 @@ bid_accept_threshold_bidding = 0.40
 bid_accept_play_threshold = 0.4
 
 # Filter to remove hands, where the play is inconsistent with the sample
-play_accept_threshold = 0.03
+play_accept_threshold_opponents = 0.03
 play_accept_threshold_partner = 0.1
+# How much do we trust declares play
+play_accept_threshold_declarer = 0.1
+min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.10
 # Number hands where we will calculate scores for when bidding
